--- a/Дз1/index.html
+++ b/Дз1/index.html
@@ -51,5 +51,37 @@
             Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
         </p>
     </section>
+    <section class="container text">
+        <div class="square one"></div>
+        <div class="square two"></div>
+            <p class="text_lorem">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde aliquid quibusdam eum, velit incidunt est natus? Tempora tenetur veniam aliquam cupiditate ipsa ad, inventore sunt nisi ab fuga, debitis corrupti?
+            </p>
+    </section>
+    <div class=" square three"></div>
+    <section class="container wrapper_text">
+        <p class="text_lorem wrapper">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde aliquid quibusdam eum, velit incidunt est natus? Tempora tenetur veniam aliquam cupiditate ipsa ad, inventore sunt nisi ab fuga, debitis corrupti?
+        </p>
+    </section>
+    <footer class="container form_section">
+        <form>
+            <div class="input_wrapper">
+                <label class="label" for="name">Name</label>
+                <input class="input" id="name" placeholder="Daria" type="text">
+            </div>
+            <div class="input_wrapper">
+                <label class="label" for="email">Email</label>
+                <input class="input" id="email" placeholder="Email" type="text">
+            </div>
+            <div class="input_wrapper">
+                <label class="label" for="email">Email</label>
+                <input class="input" id="email" placeholder="Email" type="text">
+            </div>
+            <button class="form_button">
+                FREE PRE-ORDER
+            </button>
+        </form>
+    </footer>
 </body>
 </html>
