--- a/Проэкт/index.html
+++ b/Проэкт/index.html
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                 </ul>
-                <button class="header_button">
+                <button class="button">
                     Get Started
                 </button>
             </nav>
@@ -83,6 +83,159 @@
             </div>
             <div>
                 <img src="./Img/website/google.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="grid_background">
+        <div class="container center">
+            <div>
+                <p class="info_pretitle info_pretatle_grey">
+                    Engage Visitors
+                </p>
+            </div>
+            <div class="h3">
+                <h3 class="text_h3">
+                    Understand your audience
+                </h3>
+            </div>
+            <div>
+                <p class="text_p">
+                    Early stage company? Eligible applicants get all of our products for just $49 a month.
+                </p>
+                <button class="grid_button">
+                    Get Started
+                </button>
+                <button class="grid_button">
+                    Learn More
+                </button>
+            </div>
+            <div class="flex grid">
+                <div class="item item_button">
+                    <img class="item_img" src="./Img/grid/developers.png" alt="">
+                    <p class="grid_p">
+                        Developers
+                    </p>
+                </div>
+                <div class="item item_button">
+                    <img class="item_img" src="./Img/grid/entertainment.png" alt="">
+                    <p class="grid_p">
+                        Entertainment
+                    </p>
+                </div>
+                <div class="item item_button">
+                    <img class="item_img" src="./Img/grid/athletes.png" alt="">
+                    <p class="grid_p">
+                        Athletes
+                    </p>
+                </div>
+                <div class="item item_button">
+                    <img class="item_img" src="./Img/grid/creators.png" alt="">
+                    <p class="grid_p">
+                        Creators
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="grid_item">
+        <div class="container grid_center">
+            <h3 class="grid_h3">
+                All Surfaces Covered
+            </h3>
+            <p class="grid_text">
+                IOON kills bacteria on your hands, food, tables, laptops, you name it
+            </p>
+            <div class="grid_img">
+                <img class="img_item" src="./Img/grid 2/img1.png" alt="">
+                <img class="img_item" src="./Img/grid 2/img2.png" alt="">
+                <img class="img_item" src="./Img/grid 2/img3.png" alt="">
+                <img class="img_item" src="./Img/grid 2/img4.png" alt="">                
+                <img class="img_item" src="./Img/grid 2/img5.png" alt="">
+                <img class="img_item" src="./Img/grid 2/img6.png" alt="">
+                <img class="img_item" src="./Img/grid 2/img7.png" alt="">
+            </div>
+        </div>
+    </section>
+    <section class="inbox">
+        <div class="container flex">
+            <div class="container-image">
+                <img class="container-image_img" src="./Img/inbox/wheel.svg" alt="">
+            </div>
+            <div class="info">
+                <p class="info_pretitle info_pretitle_orange">
+                    Team Inbox
+                </p>
+                <h3 class="info_title">
+                    Manage conversations
+                </h3>
+                <p class="info_text">
+                    One place to manage and respond to all conversations with leads and users. Receive messages from leads.
+                </p>
+                <div class="inbox_response">
+                    <p class="inbox_text">
+                        “Great widgets. Great selection. Great design and <span class="inbox_text-bold">easy to implement.</span> Definitely a huge time saver for a web developer!”
+                    </p>
+                    <div class="flex flex_start">
+                        <img class="inbox_img" src="./Img/inbox/Profile Image.svg" alt="">
+                        <div>
+                            <p class="inbox_name">
+                                Viella Malkovich
+                            </p>
+                            <p class="inbox_position">
+                                Creative Director at Johnson
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="bem">
+        <div class="container">
+            <div class="flex">
+                <div>
+                    <p class="info_pretitle info_pretitle_blue">
+                        Communicate Better
+                    </p>
+                    <h3 class="info_title">
+                        Built for busy small teams
+                    </h3>
+                    <p class="info_text">
+                        Three products that can be used independently or combined together for your company’s needs.
+                    </p>
+                    <button class="button">
+                        Get Started
+                    </button>
+                </div>
+                <div>
+                    <img class="bem_img" src="./Img/inbox/phone.png" alt="">
+                </div>
+            </div>
+            <div class="flex flex_start">
+                <div class="bem_flex">
+                    <p class="bem_text">
+                        <span class="inbox_text-bold">Subscriptions.</span>Foundation works with the tools and services you already use every day.
+                    </p>
+                    <a class="bem_title" href="">
+                        Learn more about subscriptions
+                    </a>
+                </div>
+                <div class="bem_flex">
+                    <p class="bem_text">
+                        <span class="inbox_text-bold">Felxible Hours.</span>Get started with our simple snippet of JavaScript or easy to install SDKs for iOS and Android.
+                    </p>
+                    <a class="bem_title" href="">
+                        Get more info about hours
+                    </a>
+                </div>
+                <div class="bem_flex">
+                    <p class="bem_text">
+                        <span class="inbox_text-bold">Fast Communication.</span>We offer measures like 2FA and SSO to ensure the safety of your data.
+                    </p>
+                    <a class="bem_title" href="">
+                        Communication guidelines
+                    </a>
+                </div>
             </div>
         </div>
     </section>
