--- a/Проэкт/index.html
+++ b/Проэкт/index.html
@@ -45,12 +45,12 @@
         </div>
     </header>
     <section class="background">
-        <div class="container flex">
+        <div class="container flex flex_inbox_column">
             <div class="background_container">
                 <h3 class="background_h3">
                     What is it about?
                 </h3>
-                <p class="background_text">
+                <p class="background_text background_text-p">
                     Building a website for a startup that looks amazing is not a rocket science anymore.
                 </p>
             </div>
@@ -65,7 +65,7 @@
         </div>
     </section>
     <section class="img">
-        <div class="container flex">
+        <div class="container flex flex_inbox_column">
             <div>
                 <img src="./Img/website/the new.png" alt="">
             </div>
@@ -157,7 +157,7 @@
         </div>
     </section>
     <section class="inbox">
-        <div class="container flex">
+        <div class="container flex flex_inbox-column">
             <div class="container-image">
                 <img class="container-image_img" src="./Img/inbox/wheel.svg" alt="">
             </div>
@@ -192,8 +192,8 @@
     </section>
     <section class="bem">
         <div class="container">
-            <div class="flex">
-                <div>
+            <div class="flex flex_inbox_column">
+                <div class="inbox_center">
                     <p class="info_pretitle info_pretitle_blue">
                         Communicate Better
                     </p>
@@ -211,16 +211,16 @@
                     <img class="bem_img" src="./Img/inbox/phone.png" alt="">
                 </div>
             </div>
-            <div class="flex flex_start">
-                <div class="bem_flex">
-                    <p class="bem_text">
+            <div class="flex flex_start flex_start-1">
+                <div class="bem_flex bem_flex-1">
+                    <p class="bem_text bem_text-1">
                         <span class="inbox_text-bold">Subscriptions.</span>Foundation works with the tools and services you already use every day.
                     </p>
-                    <a class="bem_title" href="">
+                    <a class="bem_title bem_title-1" href="">
                         Learn more about subscriptions
                     </a>
                 </div>
-                <div class="bem_flex">
+                <div class="bem_flex bem_flex-2">
                     <p class="bem_text">
                         <span class="inbox_text-bold">Felxible Hours.</span>Get started with our simple snippet of JavaScript or easy to install SDKs for iOS and Android.
                     </p>
@@ -228,7 +228,7 @@
                         Get more info about hours
                     </a>
                 </div>
-                <div class="bem_flex">
+                <div class="bem_flex bem_flex-3">
                     <p class="bem_text">
                         <span class="inbox_text-bold">Fast Communication.</span>We offer measures like 2FA and SSO to ensure the safety of your data.
                     </p>
