--- a/Проэкт/index.html
+++ b/Проэкт/index.html
@@ -65,24 +65,24 @@
         </div>
     </section>
     <section class="img">
-        <div class="container flex flex_inbox_column">
+        <div class="container flex image_grid">
             <div>
-                <img src="./Img/website/the new.png" alt="">
+                <img class="img_grid" src="./Img/website/the new.png" alt="">
             </div>
             <div>
-                <img src="./Img/website/forbes.png" alt="">
+                <img class="img_grid" src="./Img/website/forbes.png" alt="">
             </div>
             <div>
-                <img src="./Img/website/apple.png" alt="">
+                <img class="img_grid" src="./Img/website/apple.png" alt="">
             </div>
             <div>
-                <img src="./Img/website/mashable.png" alt="">
+                <img class="img_grid" src="./Img/website/mashable.png" alt="">
             </div>
             <div>
-                <img src="./Img/website/wsj.png" alt="">
+                <img class="img_grid" src="./Img/website/wsj.png" alt="">
             </div>
             <div>
-                <img src="./Img/website/google.png" alt="">
+                <img class="img_grid" src="./Img/website/google.png" alt="">
             </div>
         </div>
     </section>
@@ -102,7 +102,7 @@
                 <p class="text_p">
                     Early stage company? Eligible applicants get all of our products for just $49 a month.
                 </p>
-                <button class="grid_button">
+                <button class="grid_button grid_button-1">
                     Get Started
                 </button>
                 <button class="grid_button">
